# system_integration

data_format_translation_servers/: file.csv  file.yaml
data_format_translation_servers/node/: app.js  package-lock.json  package.json  reader.js
data_format_translation_servers/python/: main.py  pyproject.toml  reader.py
date_servers/node/: app.js  package-lock.json  package.json
date_servers/node/routers/: timestampRouter.js
date_servers/python/: main.py  pyproject.toml
file_formats_bonanza/: file.json  file.txt  file.xml
file_formats_bonanza/node/: package-lock.json  package.json  reader.js
