[tool.poetry]
name = "file-formats-bonanza"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "file_formats_bonanza"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
